--- a/lambda/package.json
+++ b/lambda/package.json
@@ -4,6 +4,8 @@
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.0.0",
     "@aws-sdk/lib-dynamodb": "^3.0.0",
-    "uuid": "^9.0.0"
+    "@aws-sdk/client-ssm": "^3.0.0",
+    "uuid": "^9.0.0",
+    "bcryptjs": "^2.4.3"
   }
 }
