--- a/lambda/package.json
+++ b/lambda/package.json
@@ -5,6 +5,7 @@
     "@aws-sdk/client-dynamodb": "^3.0.0",
     "@aws-sdk/lib-dynamodb": "^3.0.0",
     "@aws-sdk/client-ssm": "^3.0.0",
+    "twilio": "^5.3.3",
     "uuid": "^9.0.0",
     "bcryptjs": "^2.4.3"
   }
