--- a/lambda/package.json
+++ b/lambda/package.json
@@ -7,6 +7,7 @@
     "@aws-sdk/client-ssm": "^3.0.0",
     "twilio": "^5.3.3",
     "uuid": "^9.0.0",
-    "bcryptjs": "^2.4.3"
+    "bcryptjs": "^2.4.3",
+    "dayjs": "^1.11.10"
   }
 }
