--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,8 +21,7 @@
     "test:ui": "vitest --ui",
     "test:coverage": "vitest --coverage",
     "format": "prettier --write .",
-    "format:check": "prettier --check .",
-    "prepare": "husky install"
+    "format:check": "prettier --check ."
   },
   "browserslist": {
     "production": [
